--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,177 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html {
+  font-size: 62.5%; }
+
 body {
+  min-height: 100vh;
+  font-family: "Inria Sans", sans-serif;
+  background-color: #199FBF; }
+
+.header {
+  width: 100%;
+  display: flex;
+  text-align: center;
+  background-color: #C8CFD2;
+  align-items: center;
+  position: fixed; }
+  .header__img {
+    width: 10rem;
+    height: 10rem;
+    padding-left: 1.5rem; }
+  .header h1 {
+    font-size: 6rem; }
+  .header__nav ul {
+    margin-left: 39rem;
+    list-style: none;
+    display: flex;
+    justify-content: space-between; }
+  .header__nav-link:hover {
+    text-decoration: underline black 0.2rem solid; }
+
+.nav-link {
+  font-size: 1.9rem;
+  font-family: "Inria Sans", sans-serif;
+  color: black;
+  text-transform: uppercase;
+  margin: 1.5rem; }
+
+.formulario {
+  margin: 0 auto;
+  width: 85%;
+  height: auto;
+  padding: 2rem; }
+  .formulario__titulo {
+    font-size: 2.5rem;
+    text-align: center; }
+  .formulario__contenido {
+    display: flex;
+    flex-direction: column;
+    text-align: center; }
+  .formulario__contenido h5 {
+    font-size: 1.5rem;
+    padding: 1rem; }
+  .formulario__contenido input {
+    height: 4rem;
+    min-width: 20rem;
+    border: solid black 0.2rem;
+    border-radius: 1rem;
+    text-align: center;
+    outline: none; }
+  .formulario__contenido-submit {
+    margin: 0 auto;
+    min-width: 2rem;
+    max-width: 10rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center; }
+
+#consultar:hover {
   background-color: gray; }
 
-/*@import './general';
-@import './header';
-@import './form';
-@import './benefits';
-@import './plans';
-@import './footer' */
+.beneficios {
+  padding-top: 13rem;
+  width: 80%;
+  margin: 0 auto; }
+  .beneficios__items {
+    display: flex;
+    display: inline-block;
+    padding-bottom: 2rem;
+    text-align: center;
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    border-bottom: solid 0.5rem #C8CFD2; }
+  .beneficios__items img {
+    padding: 2rem;
+    height: 14rem; }
+
+.video {
+  width: 100%;
+  display: flex;
+  display: inline-block;
+  text-align: center;
+  padding-bottom: 2rem;
+  border-bottom: solid 0.5rem #C8CFD2; }
+  .video h3 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding: 2rem;
+    padding-top: 6rem;
+    text-decoration: underline; }
+  .video iframe {
+    border-radius: 1rem; }
+
+.plans {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  padding-bottom: 2rem;
+  border-bottom: solid 0.5rem #C8CFD2; }
+  .plans div {
+    width: 20%;
+    min-height: 20rem;
+    margin: 5rem;
+    background-color: #C8CFD2;
+    color: black;
+    font-weight: bold;
+    border-radius: 0.3rem; }
+  .plans h5 {
+    font-size: 2.5rem;
+    padding-top: 0.5rem;
+    text-align: center; }
+  .plans ul {
+    list-style: none;
+    padding-left: 0.5rem;
+    font-size: 1.5rem; }
+  .plans h3 {
+    font-size: 3rem;
+    color: chocolate;
+    text-align: center; }
+  .plans p {
+    font-size: 1.5rem;
+    color: black;
+    font-weight: bold;
+    text-align: center; }
+
+.plans__text {
+  display: flex;
+  display: inline-block;
+  align-items: center; }
+
+.plans__text:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2); }
+
+.plans__text {
+  box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73);
+  -webkit-box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73); }
+
+.footer {
+  height: auto;
+  background-color: #aa4432;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.7rem;
+  align-items: center; }
+  .footer p {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-left: 5rem; }
+  .footer ul {
+    padding-right: 5rem;
+    list-style: none;
+    display: flex; }
+  .footer img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem; }
