--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,30 +1,27 @@
-
-
-$fuente-principal: 'Inria Sans', sans-serif; 
+$fuente-principal: "Inria Sans", sans-serif;
 $titulos: 2.5rem;
 $subtitulos: 1.5rem;
 $parrafos: 0.8rem;
-$color-principal: #199FBF;
-$color-texto: #C8CFD2;
+$color-principal: #199fbf;
+$color-texto: #c8cfd2;
 $color-contraste: black;
 
-* {
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html {
+  box-sizing: inherit;
+  font-size: 62.5%;
+}
 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-  }
-  
-  html {
-
-    font-size: 62.5%;
-
-  }
 body {
-    min-height: 100vh;
-    font-family: $fuente-principal;
-    background-color: $color-principal;
-    
+  width: 100%;
+  min-height: 100vh;
+  font-family: $fuente-principal;
+  background-color: $color-principal;
 }
