--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,49 +1,39 @@
 .header {
-    width: 100%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+
+  text-align: center;
+  background-color: $color-texto;
+
+  &__img {
+    width: 10rem;
+    height: 10rem;
+  }
+
+  & h1 {
+    font-size: 6rem;
+  }
+
+  &__nav ul {
+    // margin-left: 39rem;
     display: flex;
-    
-    text-align: center;
-    background-color: $color-texto;
-    align-items: center;
-    position: fixed;
+    justify-content: space-between;
+    list-style: none;
+  }
 
-
-    &__img {
-        width: 10rem;
-        height: 10rem;
-        padding-left: 1.5rem ;
-    }
-
-    & h1 {
-        font-size: 6rem;
-    }
-
-    &__nav ul {
-        margin-left: 39rem;
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-        
-        
-     
-    }
-
-
-    
-    &__nav-link:hover {
-
-        text-decoration: underline $color-contraste 0.2rem solid;
-    }
-
+  &__nav-link:hover {
+    text-decoration: underline $color-contraste 0.2rem solid;
+  }
 }
 
 .nav-link {
-    font-size: 1.9rem;
-    font-family: $fuente-principal;
-    color: $color-contraste;
-    text-transform: uppercase;
-   
-    margin: 1.5rem;
+  font-size: 1.9rem;
+  font-family: $fuente-principal;
+  color: $color-contraste;
+  text-transform: uppercase;
 
-    
+  margin: 1.5rem;
 }
