--- a/sass/_benefits.scss
+++ b/sass/_benefits.scss
@@ -1,17 +1,21 @@
 .beneficios {
-  padding-top: 13rem;
-  width: 80%;
-  margin: 0 auto;
+  padding-top: 10rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  //   justify-content: center;
+  align-items: center;
 
   &__items {
-    display: flex;
-    display: inline-block;
-    padding-bottom: 2rem;
-    text-align: center;
+    display: block;
     align-items: center;
-    font-size: $titulos;
-    font-weight: bold;
+    max-width: 100rem;
+    margin: 0 4rem;
+    padding-bottom: 2rem;
     border-bottom: solid 0.5rem $color-texto;
+    text-align: center;
+    font-weight: bold;
+    font-size: $titulos;
   }
 
   &__items img {
@@ -29,10 +33,10 @@
   border-bottom: solid 0.5rem $color-texto;
 
   & h3 {
+    padding-top: 6rem;
+    padding: 2rem;
     font-size: $titulos;
     text-align: center;
-    padding: 2rem;
-    padding-top: 6rem;
     text-decoration: underline;
   }
 
