--- a/sass/_benefits.scss
+++ b/sass/_benefits.scss
@@ -3,16 +3,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  //   justify-content: center;
   align-items: center;
 
   &__items {
     display: block;
     align-items: center;
     max-width: 100rem;
-    margin: 0 4rem;
-    padding-bottom: 2rem;
-    border-bottom: solid 0.5rem $color-texto;
+    // padding-bottom: 2rem;
+    // border-bottom: solid 0.5rem $color-texto;
     text-align: center;
     font-weight: bold;
     font-size: $titulos;
@@ -25,12 +23,13 @@
 }
 
 .video {
-  width: 100%;
   display: flex;
-  display: inline-block;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   text-align: center;
   padding-bottom: 2rem;
-  border-bottom: solid 0.5rem $color-texto;
 
   & h3 {
     padding-top: 6rem;
@@ -41,6 +40,19 @@
   }
 
   & iframe {
+    display: block;
+    margin: 0 auto;
     border-radius: 1rem;
   }
+}
+
+.line {
+  display: block;
+  height: 0.6rem;
+  width: 100%;
+  max-width: 100rem;
+  background-color: $color-texto;
+  border: none;
+  margin: 0 auto;
+  margin-top: 2rem;
 }
