--- a/css/styles.css
+++ b/css/styles.css
@@ -134,21 +134,31 @@ body {
   margin-top: 2rem; }
 
 .plans {
-  width: 70%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 4rem auto;
+  margin-bottom: 6rem;
   display: flex;
-  padding-bottom: 2rem;
-  border-bottom: solid 0.5rem #c8cfd2; }
-  .plans div {
-    width: 20%;
-    min-height: 20rem;
-    margin: 5rem;
+  justify-content: space-evenly; }
+  .plans__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 18rem;
+    max-width: 23rem;
+    height: 30rem;
+    padding: 1.5rem 3rem;
+    line-height: 2rem;
     background-color: #c8cfd2;
     color: black;
     font-weight: bold;
-    border-radius: 0.3rem; }
+    border-radius: 0.3rem;
+    box-shadow: 0px 5px 25px 1px rgba(0, 0, 0, 0.2);
+    transition: all 0.4s; }
+    .plans__text:hover {
+      transform: scaleY(1.05) scaleX(1.1); }
   .plans h5 {
     font-size: 2.5rem;
+    font-weight: 800;
     padding-top: 0.5rem;
     text-align: center; }
   .plans ul {
@@ -158,27 +168,14 @@ body {
   .plans h3 {
     font-size: 3rem;
     color: chocolate;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 0.5rem; }
   .plans p {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    text-align: justify;
     color: black;
     font-weight: bold;
     text-align: center; }
-
-.plans__text {
-  display: flex;
-  display: inline-block;
-  align-items: center; }
-
-.plans__text:hover {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2); }
-
-.plans__text {
-  box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73);
-  -webkit-box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73);
-  -moz-box-shadow: 3px 10px 17px 1px rgba(0, 0, 0, 0.73); }
 
 .footer {
   height: auto;
