--- a/sass/_plans.scss
+++ b/sass/_plans.scss
@@ -1,66 +1,57 @@
 .plans {
-width: 70%;
-margin: 0 auto;
-display: flex;
-padding-bottom: 2rem;
-border-bottom: solid 0.5rem $color-texto;
+  width: 100%;
+  margin: 4rem auto;
+  margin-bottom: 6rem;
+  display: flex;
+  justify-content: space-evenly;
 
-
-
-
-    & div {
-        width: 20%;
-        min-height: 20rem ;
-        margin: 5rem;
-        background-color: $color-texto;
-        color: $color-contraste;
-        font-weight: bold;
-        border-radius: 0.3rem;
-    }
-
-    & h5 {
-        font-size: $titulos;
-        padding-top: 0.5rem;
-        text-align: center;
-        
-    }
-
-    & ul {
-        list-style: none;
-        padding-left: 0.5rem ;
-        font-size: $subtitulos;
-    }
-
-    & h3 {
-        font-size: 3rem;
-        color:chocolate;
-        text-align: center;
-    }
-
-    & p {
-        font-size: 1.5rem;
-        color:$color-contraste;
-        font-weight: bold;
-        text-align: center;
-    }
-
-
-}
-
-.plans__text {
+  &__text {
     display: flex;
-    display: inline-block;
-    align-items: center;
-}
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 18rem;
+    max-width: 23rem;
+    height: 30rem;
+    padding: 1.5rem 3rem;
+    line-height: 2rem;
+    background-color: $color-texto;
+    color: $color-contraste;
+    font-weight: bold;
+    border-radius: 0.3rem;
+    box-shadow: 0px 5px 25px 1px rgba(0, 0, 0, 0.2);
 
-.plans__text:hover {
-    transform: scale(1.2) ;
-    -webkit-transform: scale(1.2) ;
-    -moz-transform: scale(1.2) ;
-}
+    transition: all 0.4s;
 
-.plans__text {
-    box-shadow: 3px 10px 17px 1px rgba(0,0,0,0.73);
--webkit-box-shadow: 3px 10px 17px 1px rgba(0,0,0,0.73);
--moz-box-shadow: 3px 10px 17px 1px rgba(0,0,0,0.73);
+    &:hover {
+      transform: scaleY(1.05) scaleX(1.1);
+    }
+  }
+
+  & h5 {
+    font-size: $titulos;
+    font-weight: 800;
+    padding-top: 0.5rem;
+    text-align: center;
+  }
+
+  & ul {
+    list-style: none;
+    padding-left: 0.5rem;
+    font-size: $subtitulos;
+  }
+
+  & h3 {
+    font-size: 3rem;
+    color: chocolate;
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+
+  & p {
+    font-size: 1.6rem;
+    text-align: justify;
+    color: $color-contraste;
+    font-weight: bold;
+    text-align: center;
+  }
 }
