--- a/css/styles.css
+++ b/css/styles.css
@@ -179,21 +179,20 @@ body {
 
 .footer {
   height: auto;
-  background-color: #aa4432;
+  background-color: chocolate;
   display: flex;
   justify-content: space-between;
   padding: 0.7rem;
   align-items: center; }
   .footer p {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: black;
     font-size: 2rem;
     font-weight: bold;
     padding-left: 5rem; }
   .footer ul {
+    display: flex;
     padding-right: 5rem;
-    list-style: none;
-    display: flex; }
+    list-style: none; }
   .footer img {
     width: 3rem;
     height: 3rem;
