--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,32 +1,26 @@
 .footer {
-    height: auto;
-    background-color: rgb(170, 68, 50);
+  height: auto;
+  background-color: chocolate;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.7rem;
+  align-items: center;
+
+  & p {
+    color: black;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-left: 5rem;
+  }
+  & ul {
     display: flex;
-    justify-content: space-between;
-    padding: 0.7rem;
-    align-items: center;
+    padding-right: 5rem;
+    list-style: none;
+  }
 
-    & p   {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        color: black;
-        font-size: 2rem;
-        font-weight: bold;
-        padding-left: 5rem;
-    }
-    & ul {
-        padding-right: 5rem;
-        list-style: none;
-        display: flex;
-    }
-    
-    & img {
-            width: 3rem;
-            height: 3rem;
-            margin: 1rem;
-            
-        }
-    }
-
-
-
-
+  & img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
+  }
+}
