--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ body {
 
 .plans {
   width: 100%;
+  height: auto;
   margin: 4rem auto;
   margin-bottom: 6rem;
   display: flex;
@@ -176,6 +177,13 @@ body {
     color: black;
     font-weight: bold;
     text-align: center; }
+
+@media (max-width: 700px) {
+  .plans {
+    flex-direction: column;
+    align-items: center; }
+    .plans__text {
+      margin-bottom: 2rem; } }
 
 .footer {
   height: auto;
