--- a/sass/_plans.scss
+++ b/sass/_plans.scss
@@ -1,5 +1,6 @@
 .plans {
   width: 100%;
+  height: auto;
   margin: 4rem auto;
   margin-bottom: 6rem;
   display: flex;
@@ -53,5 +54,17 @@
     color: $color-contraste;
     font-weight: bold;
     text-align: center;
+  }
+}
+
+$phone: 700px;
+@media (max-width: $phone) {
+  .plans {
+    flex-direction: column;
+    align-items: center;
+
+    &__text {
+      margin-bottom: 2rem;
+    }
   }
 }
